Added a way to separate houses via location

--- a/house.html
+++ b/house.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <form method="get" action="bulk.py">
+    <select name="Locations" size="4">
+        <option>Bayside</option>
+        <option>Upper East Side</option>
+        <option>Tribeca</option>
+        <option>Staten Island</option>
+    </select>
     <input name="Press_me" type="submit" value="Test">
 </form>
 HIII
