--- a/house.html
+++ b/house.html
@@ -6,11 +6,32 @@
 </head>
 <body>
 <form method="get" action="bulk.py">
+    Location
     <select name="Locations" size="4">
         <option>Bayside</option>
         <option>Upper East Side</option>
         <option>Tribeca</option>
         <option>Staten Island</option>
+    </select>
+    Beds
+    <select name="Beds" size="7">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+    </select>
+    Baths
+    <select name="Baths" size="7">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
     </select>
     <input name="Press_me" type="submit" value="Test">
 </form>
