Updated the landing site

--- a/real_estate.html
+++ b/real_estate.html
@@ -3,20 +3,24 @@
 
 <head>
   <title> Real Estate Yurr </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="realstyle.css">
   <link href="hover-min.css" rel="stylesheet" media="all">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Coiny|Josefin+Sans|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
+<div id="blank">
 <div id="main">
   <h1> Knockoff Trulia: </h1>
   <h2> By Michael Nath and Yousef Amin </h2>
+  <h3> Intro CS ll </h3>
   <div id="button">
   <button class="buttons hvr-back-pulse"> Real Estate Page </button>
   <button class="buttons hvr-back-pulse"> Neighborhood Statistics </button>
   <button class="buttons hvr-back-pulse"> StUy ReAL EsTaTe </button>
   </div>
+</div>
 </div>
 <script>
   $(function () {
