--- a/real_estate.html
+++ b/real_estate.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Coiny|Josefin+Sans|Open+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body id="body">
 <div id="blank">
 <div id="main">
   <h1> Knockoff Trulia: </h1>
