Changed some stuff

--- a/house.html
+++ b/house.html
@@ -31,7 +31,7 @@
 
     <div id="Type">
         <h2>House Types</h2>
-        <select name="Type" size="6">
+        <select name="Type" multiple size="6">
             <option selected>Any</option>
             <option>Apartment</option>
             <option>Condo</option>
@@ -43,7 +43,7 @@
 
     <div id="Beds">
         <h2>Beds</h2>
-        <select name="Beds" size="8">
+        <select name="Beds" multiple size="8">
             <option selected>Any</option>
             <option>1</option>
             <option>2</option>
@@ -57,7 +57,7 @@
 
     <div id="Baths">
         <h2> Baths </h2>
-        <select name="Baths" size="15">
+        <select name="Baths" multiple size="15">
             <option selected>Any</option>
             <option>1</option>
             <option>2</option>
