--- a/stuyrealestate.html
+++ b/stuyrealestate.html
@@ -30,25 +30,25 @@ body, html {
 
 /* Second image */
 .bgimg-2 {
-  background-image: url("SoccerTeam.jpg");
+  background-image: url("https://stuy.enschool.org/rotating_images/4562/4562_0_1400_0_0.jpg");
   min-height: 400px;
 }
 
 /* Third image  */
 .bgimg-3 {
-  background-image: url("https://i.pinimg.com/originals/58/6b/f3/586bf3842dbe4ce3d2ea04d4b27594d2.gif");
+  background-image: url("2ndfloor.jpg");
   min-height: 400px;
 }
 
 /* Fourth image  */
 .bgimg-4 {
-  background-image: url("https://media.giphy.com/media/xT1Ra6ihiXouzm67Dy/giphy.gif");
+  background-image: url("3rdfloor.jpg");
   min-height: 400px;
 }
 
 /* Fifth image  */
 .bgimg-5 {
-  background-image: url("https://thumbs.gfycat.com/WeightyConsiderateKudu-size_restricted.gif");
+  background-image: url("4thfloor.jpg");
   min-height: 400px;
 }
 
@@ -102,6 +102,7 @@ canvas {
 
   <!-- Navbar -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+    <a href="#home" class="w3-bar-item w3-button" onclick="toggleFunction()"> Home </a>
     <a href="#first" class="w3-bar-item w3-button" onclick="toggleFunction()"> 1st Floor </a>
     <a href="#second" class="w3-bar-item w3-button" onclick="toggleFunction()"> 2nd Floor </a>
     <a href="#third" class="w3-bar-item w3-button" onclick="toggleFunction()"> 3rd Floor </a>
@@ -124,7 +125,7 @@ canvas {
 </div>
 
 <!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="me">
+<div class="w3-content w3-container w3-padding-64" id="home">
   <h3 class="w3-center"> Stuy Real Estate  </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
@@ -134,37 +135,27 @@ canvas {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i> The Managers </b></p><br>
-      <img src="Yousef&Mike.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Y&M" width="500" height="333">
+      <img src="YousefMike.JPG" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Y&M" width="500" height="333">
     </div>
 
-
+<br/> <br/> <br/> <br/>
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <p> On the left, you could peep the managers of Stuy HS. The first is Yousef Amin. A tall Egyptian pharaoh raised in the warmest climest, he was taught how to cook scrambled eggs. He represents the minority at Stuy and makes sure their rights don't get violated! The other is Michael Nath. A big Indian raised in the farms, he was taught to cook curry with a blindfold on. He represents the majority of Stuy and makes sure they are fed well.  </p>
     </div>
   </div>
-  <p class="w3-large w3-center w3-padding-16"> How I spend my free time: </p>
-  <p class="w3-wide"><i class="fa fa-futbol-o"></i> Sports (Soccer) </p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:60%">60%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-gamepad"></i> Games (Fortnite)</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:25%">25%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-spoon"></i> Eating </p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:15%">15%</div>
-  </div>
-</div>
 
+</div>
 
 
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">Soccer </span>
+    <span class="w3-xxlarge w3-text-white w3-wide"> 1st Floor </span>
   </div>
 </div>
+<div class="w3-content w3-container w3-padding-64" id="first">
+  <h3 class="w3-center"> The Underwater Room </h3>
+  <p class="w3-center"><em> Have you ever wanted to live in an underwater chamber of piss and chlorine? Do you just not want to wear clothes? Well, the Stuy first floor is for you. We have a three thousand sq. ft. pool, split into 5 rooms. The rooms are separated by some long stick things, so there are lots of privacy. Even if you don't like the water, the first floor also has tons of music rooms. If you want to learn how to play <i> Old Time Road </i> or just break guitars, this is the place for you. We have unlimited instruments, and its unlimited peace. We're sure you'd love it! </em></p><br>
 
 
 
@@ -185,43 +176,27 @@ canvas {
 </div>
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide"> Fortnite </span>
+     <span class="w3-xxlarge w3-text-white w3-wide"> 2nd Floor </span>
   </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="fortnite">
-  <h3 class="w3-center"> I'm kind of a beast at Fornite</h3>
-  <p class="w3-center"><em> I started playing Fornite last summer. At first, I didn't really understand what the hype was all about, but as I played it more, it became more fun.
-  Winning was addicting and playing with friends made the game even better. Since school started, I haven't been playing as much, but hopefully Fortnite won't die out soon. That being said,
-here are my stats. </em></p><br>
+<div class="w3-content w3-container w3-padding-64" id="second">
+  <h3 class="w3-center"> Senior Citizen Plaza </h3>
+  <p class="w3-center"><em> Since old people can't really go up stairs or broken escalators or even broken elevators, the second floor is dedicated to senior citizens. The senior citizens cluster around a bar, with chess tables. In their fre time, they play chess of course and drink Heineken Light. Anyway, this is the most expensive floor. Lockers cost around 17 cents and rooms are about 19 cents. This floor is also dedicated to robots, like Mr.Brooks. These robots handle the computer rooms and make computers do crazy things. #RobotApocalypse </em></p><br>
 
-  <img src="stats.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I've played over 6,000 matches and grabbed over 300 wins. Not too shabby if I were to say so for myself.  ">
-
-  <p> <center> So out of the 8.3 million people that play Fortnite, I'm top 200,000! </center> </p>
 
   <!-- Fourth Parallax Image with Portfolio Text -->
   </div>
   </div>
   <div class="bgimg-4 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
-        <span class="w3-xxlarge w3-text-white w3-wide"> Arcade Games </span>
+        <span class="w3-xxlarge w3-text-white w3-wide"> 3rd Floor </span>
     </div>
   </div>
 
-  <div class="w3-content w3-container w3-padding-64" id="snake">
-    <h3 class="w3-center"> Snake </h3>
-    <p class="w3-center"><em> Growing up, I loved to play arcade games! I enjoyed all arcades, such as Chuck E. Cheese's and Dave & Buster's. Now as I'm growing older, I'm able to make these games,
-      courtesy of Mr. Brooks' teaching. So totally without the help of my brother and Google, I present to you Snake:
-
-
-
-<br/> <br/>
-
-<center> <form action="https://lisa.stuy.edu/~yamin10/Snake.html" target="_blank">
-        <button type="submit"> Play Snake </button>
-     </form> </center>
-
-
+  <div class="w3-content w3-container w3-padding-64" id="third">
+    <h3 class="w3-center"> A Stuy Kids's Worst Nightmare: THE GYM </h3>
+    <p class="w3-center"><em> On the third floor, you could find one of our two fitness floors. This floor consists of a gym with six basketball hoops and a cardio room. However, this floor is said to be haunted. According to legends, approximately 6,000 nerds have broken their glasses playing basketball in this gym. No wonder why the health clinic is right next to the gym! On this floor, you could also find a beautiful quilt. Made from the finest material, it was imported right from Panama. On this floor, you could also find the more political fellas. You could say they specialize in history and geography. Oh yeah, and this floor has literally the only escalator that works. So it'd be worth your money and energy to live on this floor!
 
  </em></p><br>
 
